--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
 #quote {
   width: 26rem;
-  margin: 3rem 0;
+  margin: 3rem 20rem;
   text-align: center;
   padding: 1rem;
+  font-size: 1.2rem;
 }
 
 #quote q {
