--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -8,9 +8,19 @@ body {
   font-family: "Lora", serif;
 }
 
+.page-container {
+  margin-top: 2rem;
+  display: flex;
+  justify-content: space-around;
+}
+
+.page-container h2 {
+  font-size: 2.2rem;
+}
+
 .grid-calculator {
   max-width: 26rem;
-  min-height: 96vh;
+  min-height: 40vh;
   display: grid;
   margin: 0 auto;
   grid-template-areas:
@@ -25,9 +35,9 @@ body {
 
 .grid-calculator > button {
   text-align: center;
-  padding: 15px 30px;
-  font-size: 15px;
-  font-size: 2rem;
+  padding: 1rem 1.2rem;
+  font-size: 1rem;
+  font-size: 1.8rem;
   border: 1px solid #333;
   cursor: pointer;
 }
@@ -37,8 +47,8 @@ body {
   background-color: #858694;
   color: #fff;
   text-align: right;
-  padding-right: 2px;
-  font-size: 15px;
+  padding-right: 0.1rem;
+  font-size: 1rem;
 }
 
 .equal {
